--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -8,7 +8,12 @@ html {
 }
 body {
   background-color: #000000;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 hr {
-  color: bisque;
+  color: rgb(245, 238, 229);
+  border-bottom: 3px solid;
+  width: 100%;
+  margin: 10px;
 }
